k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels:
    app: prediction-app
spec:
  selector:
    matchLabels:
      app: prediction-app
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: prediction-app
    spec:
      containers:
        - name: prediction-app
          image: docker.pkg.github.com/mur6/internal-api-server-test/simpleapi
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "512Mi"
              cpu: "1000m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
      imagePullSecrets:
        - name: regcred
