k8s/myservice.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myservice-service
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 5000
      protocol: TCP
  selector:
    app: ml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myservice-deployment
  labels:
    app: ml
spec:
  selector:
    matchLabels:
      app: ml
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ml
    spec:
      containers:
        - name: ml
          image: docker.pkg.github.com/mur6/wsgi-server-test/myservice
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "512Mi"
              cpu: "1000m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
