k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
  type: NodePort
  selector:
    app: prediction-app
